--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,12 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              }
-            ],
+                "input": "public",
+                "output": "/"
+              },
+              "src/favicon.ico",
+              "src/assets"
+            ],            
             "styles": [
               "src/styles.css"
             ],
